--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@airswap/libraries": "4.3.4",
+    "@airswap/libraries": "https://github.com/clearmatics/airswap-protocols/releases/download/pcgc-r6.1/airswap-libraries-4.3.4-autonity.2.tgz",
     "@craco/craco": "^6.2.0",
     "@fontsource/dm-mono": "^4.5.0",
     "@greypixel_/nicenumbers": "^0.0.18",
