--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.16",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router": "^5.1.20",
     "@types/styled-components": "^5.1.12",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
@@ -66,6 +67,7 @@
     "truncate-eth-address": "^1.0.2",
     "typescript": "^4.4.3",
     "usehooks-ts": "^3.1.0",
+    "vm-browserify": "^1.1.2",
     "zlib-browserify": "^0.0.3"
   },
   "devDependencies": {
@@ -103,8 +105,5 @@
   },
   "resolutions": {
     "styled-components": "^5"
-  },
-  "engines": {
-    "node": "18.19.0"
   }
 }
